# AI_ticket_handling_system

./: .env  .env.example  README.md  docker-compose.yml  phases.md  refund_policy_test.md
backend/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/app/: celery_app.py  config.py  main.py
backend/app/agents/: edges.py  graph.py  state.py
backend/app/agents/nodes/: analytics.py  escalation.py  feedback.py  resolver.py  router.py  triage.py
backend/app/agents/prompts/: analytics.py  escalation.py  resolver.py  router.py  triage.py
backend/app/agents/tools/: duplicate_detector.py  notifier.py  rag_search.py  sla_calculator.py
backend/app/api/: router.py
backend/app/api/v1/: analytics.py  health.py  knowledge.py  manager.py  notifications.py  sla.py  tickets.py
backend/app/db/: redis.py  supabase.py  supabase_client.py
backend/app/db/repositories/: analytics_repo.py  notification_repo.py
backend/app/middleware/: auth.py  error_handler.py  rate_limit.py
backend/app/models/: knowledge.py  ticket.py
backend/app/services/: analytics_service.py  chunker.py  document_parser.py  input_sanitizer.py  knowledge_service.py  llm_resilience.py  notification_service.py  sla_service.py  ticket_service.py
backend/app/workers/: embedding_worker.py  sla_checker.py  ticket_processor.py
backend/scripts/: backfill_sla_deadlines.py
backend/supabase/migrations/: 20260415_phase4.sql  20260416_phase5.sql  20260416_phase5_analytics_rls.sql  20260416_phase7_polish.sql
docs/: api-reference.md  architecture.md  deployment-guide.md  runbook.md  system_overview.md
(+48 files in other folders)
